Fixed deprication error
Fixed deprication error for sql class on compile